@@ -1,5 +1,9 @@
 package model;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import model.bill.Bill;
 import model.bill.BillingManager;
 import model.equipment.Equipment;
@@ -12,9 +16,6 @@ import model.strategy.LatePenalty;
 import model.strategy.PenaltyRule;
 import model.user.User;
 import model.user.UserManager;
-
-import java.util.ArrayList;
-import java.util.List;
 
 public class RentalSystemFacade {
     private static RentalSystemFacade instance;
@@ -154,7 +155,7 @@ public class RentalSystemFacade {
     public List<Rental> getOverdueRentals() {
         return rentalManager.listAll().stream()
                 .filter(Rental::isOverdue)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public double getTotalRevenue() {
